# enzflow

./: .env.example  .gitignore  CLAUDE.md  ROADMAP.md  pyproject.toml  requirements.txt  sample.sh  初步计划.md
configs/: finetune_enzyme.yaml  pretrain_afdb.yaml
enzflow/data/: dataset.py  featurizer.py  pdb_parser.py  residue_constants.py  transforms.py
enzflow/evaluation/: __init__.py  designability.py  diversity.py  geometry.py
enzflow/model/: __init__.py  adaln.py  atom_decoder.py  atom_encoder.py  flow_model.py  pair_repr.py  pairformer.py
enzflow/training/: __init__.py  checkpoint.py  flow_matching.py  notify.py  scheduler.py
scripts/: analyze_data_stats.py  evaluate.py  sample.py  train.py  train_sanity.py
tests/: conftest.py  test_adaln.py  test_atom_decoder.py  test_atom_encoder.py  test_dataset.py  test_evaluation.py  test_featurizer.py  test_flow_model.py  test_pair_repr.py  test_pairformer.py  test_pdb_parser.py  test_residue_constants.py  test_training.py  test_transforms.py
