[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enzflow"
version = "0.1.0"
description = "All-atom protein (enzyme) generation via Rectified Flow Matching"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "gemmi>=0.6.0",
    "numpy>=1.24.0",
    "einops>=0.7.0",
    "accelerate>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
train = [
    "wandb>=0.16.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
include = ["enzflow*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
ignore = ["N806"]  # allow uppercase math variables (R, Q, H, N)

[tool.pytest.ini_options]
testpaths = ["tests"]
